# ethical-manifolds

./: .dvcignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_environment.sh  setup_project.py
.dvc/: config
data/: README.md  sample_data.csv.dvc
docs/: README.md
ethical_manifolds/: __init__.py  classifiers.py  embeddings.py  manifold.py  visualization.py
ethical_manifolds/models/: classifier_model.py  embedding_model.py
ethical_manifolds/utils/: data_processing.py  metrics.py
examples/: analyze_embeddings.py  basic_usage.py  train_and_test.py
scripts/: analyze_sample_data.py  create_sample_data.py  evaluate_models.py  train_models.py
tests/: test_classifiers.py  test_embeddings.py  test_manifold.py  test_visualization.py
