[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethical-manifolds"
version = "0.1.0"
description = "A package for ethical manifolds"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.19.5",
    "tensorflow>=2.6.0,<3.0.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.2.0",
    "seaborn>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ethical_manifolds*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=ethical_manifolds"
testpaths = [
    "tests",
]
